<resources>
    <string name="app_name">My Application</string>
    <string name="menu">Image</string>
    <string name="logo_search">Image</string>
    <string name="martabak">Image</string>
    <string name="ketoprak">Image</string>
    <string name="sate">Image</string>
    <string name="cancle">Image</string>
    <string name="back">Back</string>
    <string name="rotibakar">Image</string>
    <string name="chart_order">Chart Order</string>
    <string name="cari_makanan">Cari makanan</string>
    <string name="pesanan">Pesanan:</string>
    <string name="terbaik_di_sekitarmu">Terbaik di sekitarmu</string>
    <string name="populer">Populer</string>
    <string name="sate_string">sate</string>
    <string name="martabak_string">Martabak</string>
    <string name="rp_40_000">Rp.40.000</string>
    <string name="ketoprak_string">Ketoprak</string>
    <string name="rp_12_000">Rp.12.000</string>
    <string name="rp_18_000">Rp.18.000</string>
    <string name="roti_bakar_sting">Roti Bakar</string>
    <string name="rp_20_000">Rp.20.000</string>
    <string name="tambah">Image</string>
    <string name="remove">Image</string>
    <string name="_3">3</string>
    <string name="all_menu">All menu</string>
    <string name="_2">2</string>
    <string name="item_total">Item total</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="tax">Tax</string>
    <string name="ro_8000">Ro.8000</string>
    <string name="ro_1000">Ro.1000</string>
    <string name="ro_174_000">Ro.174.000</string>
    <string name="total">Total</string>
    <string name="rp_183_000">Rp.183.000</string>
    <string name="checkout">Checkout</string>
</resources>