<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/menu"
            android:src="@drawable/menu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/search"
            android:contentDescription="@string/logo_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cari_makanan"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginVertical="60dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terbaik_di_sekitarmu"
            android:layout_marginVertical="100dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/populer"
                android:textColor="@color/black"
                android:layout_marginVertical="130dp"/>
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sate_string"
                android:textColor="@color/black"
                android:layout_marginVertical="130dp" />
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/martabak_string"
                android:textColor="@color/black"
                android:layout_marginVertical="130dp"/>
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_menu"
                android:textColor="@color/black"
                android:backgroundTint="#00ff00"
                android:layout_marginVertical="130dp"/>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_marginVertical="190dp"
            android:contentDescription="@string/martabak"/>
        <ImageButton
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_marginVertical="190dp"
            android:contentDescription="@string/ketoprak"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/martabak"
            android:contentDescription="@string/martabak"
            android:layout_marginVertical="206dp"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/desc1"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginVertical="360dp"
            android:layout_marginStart="50dp"
            android:text="@string/martabak_string"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/desc2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginVertical="386dp"
            android:layout_marginStart="54dp"
            android:text="@string/rp_40_000"
            android:textSize="15sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/unnamed"
            android:contentDescription="@string/martabak"
            android:layout_marginVertical="206dp"
            android:layout_marginStart="190dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/desc3"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginVertical="360dp"
            android:layout_marginStart="220dp"
            android:text="@string/ketoprak_string"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/desc4"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginVertical="386dp"
            android:layout_marginStart="220dp"
            android:text="@string/rp_12_000"
            android:textSize="15sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_marginVertical="434dp"
            android:contentDescription="@string/sate"/>
        <ImageButton
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_marginVertical="434dp"
            android:contentDescription="@string/rotibakar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/images"
            android:layout_marginVertical="448dp"
            android:layout_marginStart="12dp" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/rotibakar"
            android:layout_marginVertical="448dp"
            android:layout_marginStart="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="602dp"
            android:layout_marginStart="70dp"
            android:text="@string/sate_string"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="627dp"
            android:text="@string/rp_18_000"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="60dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/roti_bakar_sting"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginVertical="602sp"
            android:layout_marginStart="220dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/rp_20_000"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginVertical="627dp"
            android:layout_marginStart="220dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
