<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="19sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">
        <ImageView
            android:contentDescription="@string/cancle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cancle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_order"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginVertical="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesanan"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:layout_marginVertical="90dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:layout_width="match_parent"
            android:contentDescription="@string/sate"
            android:layout_height="130dp"
            android:layout_marginVertical="130dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/images"
            android:layout_marginVertical="142dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="166dp"
            android:layout_marginStart="140dp"
            android:text="@string/sate_string"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="190dp"
            android:text="@string/rp_18_000"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="140dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/tambah"
            android:src="@drawable/tambah"
            android:layout_marginVertical="176dp"
            android:layout_marginStart="250dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/remove"
            android:src="@drawable/remove"
            android:layout_marginVertical="176dp"
            android:layout_marginStart="300dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="178dp"
            android:text="@string/_3"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="285dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/rotibakar"
            android:layout_marginVertical="260dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/rotibakar"
            android:layout_marginVertical="275dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="290dp"
            android:layout_marginStart="140dp"
            android:text="@string/roti_bakar_sting"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="315dp"
            android:layout_marginStart="140dp"
            android:text="@string/rp_20_000"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/tambah"
            android:src="@drawable/tambah"
            android:layout_marginVertical="300dp"
            android:layout_marginStart="250dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/remove"
            android:src="@drawable/remove"
            android:layout_marginVertical="300dp"
            android:layout_marginStart="300dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="300dp"
            android:text="@string/_2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="285dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/rotibakar"
            android:layout_marginVertical="390dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/martabak"
            android:layout_marginVertical="405dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="430dp"
            android:layout_marginStart="140dp"
            android:text="@string/martabak_string"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="460dp"
            android:layout_marginStart="140dp"
            android:text="@string/rp_40_000"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/tambah"
            android:src="@drawable/tambah"
            android:layout_marginVertical="440dp"
            android:layout_marginStart="250dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/remove"
            android:src="@drawable/remove"
            android:layout_marginVertical="440dp"
            android:layout_marginStart="300dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginVertical="440dp"
            android:text="@string/_2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="285dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/item_total"
            android:textSize="19sp"
            android:layout_marginVertical="530dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/ro_174_000"
            android:textSize="19sp"
            android:layout_marginVertical="530dp"
            android:layout_marginStart="250dp"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/delivery_charge"
            android:textSize="19sp"
            android:layout_marginVertical="560dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/ro_8000"
            android:textSize="19sp"
            android:layout_marginVertical="560dp"
            android:layout_marginStart="250dp"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/tax"
            android:textSize="19sp"
            android:layout_marginVertical="590dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/ro_1000"
            android:textSize="19sp"
            android:layout_marginVertical="590dp"
            android:layout_marginStart="250dp"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginVertical="620dp">
        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/total"
            android:textSize="19sp"
            android:layout_marginVertical="620dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/rp_183_000"
            android:textSize="19sp"
            android:layout_marginVertical="620dp"
            android:layout_marginStart="250dp"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/checkout"
            android:layout_marginVertical="650dp"
            android:layout_marginStart="25dp"
            android:backgroundTint="#00ff00">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>